--- a/addons/godot-wasm3/SConstruct
+++ b/addons/godot-wasm3/SConstruct
@@ -13,8 +13,9 @@ env = SConscript("./godot-cpp/SConstruct")
 # - LINKFLAGS are for linking flags
 
 # tweak this if you want to use different folders, or more folders, to store your source code in.
-env.Append(CPPPATH=["./src/", "./lib/wasm3/source/", "./lib/wasm3/platforms/cpp/wasm3_cpp/include/"])
-sources = Glob("./src/*.cpp")
+env.Append(CPPPATH=["./src/", "./lib/wasm3/source/"])
+env.Append(CPPDEFINES=['d_m3HasWASI'])
+sources = Glob("./src/*.cpp") + Glob("./lib/wasm3/source/*.c")
 
 if env["platform"] == "macos":
     library = env.SharedLibrary(
